--- a/Savio/PINViewController/CreatePINViewController.xib
+++ b/Savio/PINViewController/CreatePINViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="GothamRounded-Light.otf">
@@ -20,10 +20,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreatePINViewController" customModule="Savio" customModuleProvider="target">
             <connections>
+                <outlet property="backButton" destination="dxE-82-rRE" id="FnF-gK-5hI"/>
                 <outlet property="backgroundScrollView" destination="r4N-aq-d7H" id="2wE-Mh-nY6"/>
                 <outlet property="confirmPIN" destination="Caz-QS-qcK" id="maf-lX-Dci"/>
                 <outlet property="enterFiveDigitCodeLabel" destination="Aa7-UQ-9QT" id="kTN-6x-LgW"/>
                 <outlet property="enterFourDigitPIN" destination="JfG-pe-WIG" id="1uy-00-dh3"/>
+                <outlet property="headerLabel" destination="KSj-ds-clV" id="O05-1i-TJu"/>
                 <outlet property="reEnterFourDigitPIN" destination="Lq4-PM-TIF" id="GDn-1e-dsa"/>
                 <outlet property="toolBar" destination="yAS-5V-1lB" id="f0s-gQ-57a"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
