--- a/Savio/SavingPlanSetup/SASavingPlanViewController.xib
+++ b/Savio/SavingPlanSetup/SASavingPlanViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SASavingPlanViewController" customModule="Savio" customModuleProvider="target">
             <connections>
+                <outlet property="cameraButton" destination="Ola-jz-tZL" id="WCw-eZ-lGD"/>
                 <outlet property="savingPlanTitleLabel" destination="M9o-cd-Fof" id="IVZ-jL-KJe"/>
                 <outlet property="tblView" destination="MUm-JV-X8Q" id="TWU-IH-I3j"/>
                 <outlet property="topBackgroundImageView" destination="Ohz-oo-qwT" id="LVI-61-nnX"/>
@@ -37,24 +38,41 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ohz-oo-qwT">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ohz-oo-qwT">
                             <rect key="frame" x="0.0" y="0.0" width="600" height="192"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="192" id="8FF-v9-xD8"/>
+                            </constraints>
                         </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ola-jz-tZL">
+                            <rect key="frame" x="275" y="71" width="51" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="4NM-eD-8sY"/>
+                                <constraint firstAttribute="width" constant="51" id="4gd-Et-NBw"/>
+                            </constraints>
+                            <state key="normal" image="generic-camera.png"/>
+                            <connections>
+                                <action selector="cameraButtonPressed:" destination="-1" eventType="touchUpInside" id="hPH-08-BCT"/>
+                            </connections>
+                        </button>
                     </subviews>
-                    <color key="backgroundColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="M9o-cd-Fof" secondAttribute="bottom" constant="40" id="1QY-t0-Sqq"/>
                         <constraint firstItem="M9o-cd-Fof" firstAttribute="leading" secondItem="x7I-Oc-D2D" secondAttribute="leading" constant="60" id="2XB-cQ-EKv"/>
                         <constraint firstItem="Ohz-oo-qwT" firstAttribute="leading" secondItem="x7I-Oc-D2D" secondAttribute="leading" id="3Mn-3q-Fi3"/>
+                        <constraint firstAttribute="bottom" secondItem="Ola-jz-tZL" secondAttribute="bottom" constant="71" id="4RW-zB-R7F"/>
                         <constraint firstAttribute="bottom" secondItem="Ohz-oo-qwT" secondAttribute="bottom" id="FqH-MW-Twv"/>
+                        <constraint firstItem="Ola-jz-tZL" firstAttribute="centerX" secondItem="x7I-Oc-D2D" secondAttribute="centerX" id="Hzd-mL-QOE"/>
                         <constraint firstAttribute="trailing" secondItem="Ohz-oo-qwT" secondAttribute="trailing" id="dc7-8l-EaL"/>
                         <constraint firstItem="Ohz-oo-qwT" firstAttribute="top" secondItem="x7I-Oc-D2D" secondAttribute="top" id="nEc-ou-MIo"/>
                         <constraint firstItem="M9o-cd-Fof" firstAttribute="top" secondItem="x7I-Oc-D2D" secondAttribute="top" constant="35" id="uaU-s5-Vpj"/>
                         <constraint firstAttribute="trailing" secondItem="M9o-cd-Fof" secondAttribute="trailing" constant="60" id="v4P-ZP-vZo"/>
                         <constraint firstAttribute="height" constant="192" id="wjg-Ef-b20"/>
+                        <constraint firstItem="Ola-jz-tZL" firstAttribute="top" secondItem="x7I-Oc-D2D" secondAttribute="top" constant="71" id="x4S-U3-Nvy"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MUm-JV-X8Q">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MUm-JV-X8Q">
                     <rect key="frame" x="35" y="246" width="530" height="354"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
@@ -73,18 +91,10 @@
                 <constraint firstAttribute="bottom" secondItem="MUm-JV-X8Q" secondAttribute="bottom" id="YBJ-Xt-aaS"/>
                 <constraint firstItem="x7I-Oc-D2D" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="44" id="s18-v9-yrf"/>
             </constraints>
-            <point key="canvasLocation" x="480" y="366"/>
+            <point key="canvasLocation" x="519" y="42"/>
         </view>
-        <viewController id="2C8-lh-wKQ">
-            <layoutGuides>
-                <viewControllerLayoutGuide type="top" id="Xkm-Hf-cTN"/>
-                <viewControllerLayoutGuide type="bottom" id="4x2-KQ-SNE"/>
-            </layoutGuides>
-            <view key="view" contentMode="scaleToFill" id="pbJ-G9-Uj8">
-                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-            </view>
-        </viewController>
     </objects>
+    <resources>
+        <image name="generic-camera.png" width="51" height="50"/>
+    </resources>
 </document>
